prevented text wrap on battle history

--- a/main.css
+++ b/main.css
@@ -223,3 +223,7 @@ th,
 .b-success {
   color: green;
 }
+
+.text-nowrap {
+  text-wrap: nowrap;
+}
